<resources>
    <string name="app_name">Talkademy_Phase4</string>
    <string name="simple_button_test">Simple Button Test</string>

    <string name="del">DEL</string>
    <string name="reset">RESET</string>
    <string name="off">OFF</string>
    <string name="star">*</string>
    <string name="divide">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="zero_zero">00</string>
    <string name="dot">.</string>
    <string name="simple_text">simple data to transfer to second activity</string>
    <string name="send">Send</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="type_your_word_here">Type your word here</string>

    <string name="america">America</string>
    <string name="africa">Africa</string>
    <string name="asia">Asia</string>
    <string name="europe">Europe</string>
    <string name="australia">Australia</string>
    <string name="select_continents_to_show">Select continents to Show</string>
    <string name="setting">Setting</string>
    <string name="like">like</string>
    <string name="get_contact_list">Get Contact List</string>
    <string name="load_contact_list">Load Contact List From Room</string>
    <string name="choose_contact">Choose Contact</string>
    <string name="start">start</string>
    <string name="base_percentage">0/100</string>
    <string name="ten">10</string>


</resources>