<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/darkGray"
        app:title="Calculator"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/shown_number_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_margin"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/mega_font"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                tools:text="8.0 - 3.0 :" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:padding="@dimen/standard_margin"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/input_layout_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/del_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:gravity="center"
                android:text="@string/del"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/reset_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:gravity="center"
                android:text="@string/reset"
                android:textAlignment="center"
                android:textColor="@color/white" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/off_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:gravity="center"
                android:text="@string/reset"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/star_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:gravity="center"
                android:text="@string/star"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/input_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/one_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/lightGray"
                android:gravity="center"
                android:text="@string/one"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/two_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/lightGray"
                android:gravity="center"
                android:text="@string/two"
                android:textAlignment="center"
                android:textColor="@color/white" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/three_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/lightGray"
                android:gravity="center"
                android:text="@string/three"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/divide_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:gravity="center"
                android:text="@string/divide"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/input_layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/four_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/lightGray"
                android:gravity="center"
                android:text="@string/four"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/five_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/lightGray"
                android:gravity="center"
                android:text="@string/five"
                android:textAlignment="center"
                android:textColor="@color/white" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/six_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/lightGray"
                android:gravity="center"
                android:text="@string/six"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/minus_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:gravity="center"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/input_layout_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/seven_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/lightGray"
                android:gravity="center"
                android:text="@string/seven"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/eight_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/lightGray"
                android:gravity="center"
                android:text="@string/eight"
                android:textAlignment="center"
                android:textColor="@color/white" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nine_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/lightGray"
                android:gravity="center"
                android:text="@string/nine"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/plus_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:gravity="center"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/input_layout_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/zero_zero_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/lightGray"
                android:gravity="center"
                android:text="@string/zero_zero"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/zero_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/lightGray"
                android:gravity="center"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@color/white" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dot_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/lightGray"
                android:gravity="center"
                android:text="@string/dot"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/equal_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/number_btn_size"
                android:layout_weight="1"
                android:background="@color/darkGray"
                android:gravity="center"
                android:text="@string/equal"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>