<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/number_btn_size">

    <RelativeLayout
        android:id="@+id/input_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/dummy">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/four_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/number_btn_size"
                android:layout_toStartOf="@id/dummy_left"
                android:background="@color/lightGray"
                android:gravity="center"
                android:text="@string/four"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <View
                android:id="@+id/dummy_left"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/five_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/number_btn_size"
                android:layout_toEndOf="@id/dummy_left"
                android:background="@color/lightGray"
                android:gravity="center"
                android:text="@string/five"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </RelativeLayout>


        <View
            android:id="@+id/dummy"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dummy">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/six_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/number_btn_size"
                android:layout_toStartOf="@id/dummy_right"
                android:background="@color/lightGray"
                android:gravity="center"
                android:minWidth="100dp"
                android:text="@string/six"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <View
                android:id="@+id/dummy_right"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/minus_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/number_btn_size"
                android:layout_toEndOf="@id/dummy_right"
                android:background="@color/darkGray"
                android:gravity="center"
                android:minWidth="100dp"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>